# serializer version: 1
# name: test_dcmd_accounts
  '''
  createdOn: '1970-01-02T03:04:05.000000'
  id: a:00000000-0000-0000-0000-000000000000
  isPersonal: false
  membersGroupId: g:00000000-0000-0000-0000-000000000000
  metadata:
    x-description: heyyo
  name: test-dcmd-account.random-id
  visibilityLevel: public
  
  
  '''
# ---
# name: test_dcmd_auth_whoami
  '''
  expires: '1970-01-02T03:04:05.000000'
  user:
    account_id: a:00000000-0000-0000-0000-000000000000
    email: john.doe@example.com
    has_operations:
    - account
    - admin.cde
    - admin.config
    - admin.grantadmin
    - admin.metadata
    - admin.metrics
    - admin.tasks
    - admin.users
    - group
    identity:
      fqda: dcmd.tester@localhost
      is_local_user: true
      primary_id: 00000000-0000-0000-0000-000000000000
      user_name: dcmd.tester
    image: null
    metadata:
      x-tos: '{"toc":3,"coc":6,"priv":3,"com":1}'
    name: dcmd tester
  
  
  '''
# ---
# name: test_dcmd_groups
  '''
  accountLinked: false
  controlledAccess: false
  createdOn: '1970-01-02T03:04:05.000000'
  id: g:00000000-0000-0000-0000-000000000000
  metadata: {}
  name: test-dcmd-group.random-id
  visibilityLevel: unlisted
  
  
  '''
# ---
# name: test_dcmd_pdd
  '''
  id: 00000000-0000-0000-0000-000000000000
  
  '''
# ---
# name: test_dcmd_pdd.1
  '''
  [O8zPEsiM] Age
  [6fr70ICV] Zip Code
  
  '''
# ---
# name: test_dcmd_pdd.2
  '''
  [6fr70ICV] Zip Code
  [O8zPEsiM] Age
  
  '''
# ---
# name: test_dcmd_pdd.3
  '''
  New bundle name: MyBundle
  Element IDs: ['O8zPEsiM', '6fr70ICV']
  
  New bundle ID: b-00000000
  
  '''
# ---
# name: test_dcmd_pdd.4
  '''
  MyBundle
     [O8zPEsiM] Age
     [6fr70ICV] Zip Code
  
  '''
# ---
# name: test_dcmd_tasks
  dict({
    'data': None,
    'errors': list([
    ]),
    'event_time': '1970-01-02T03:04:05.000000',
    'id': '00000000-0000-0000-0000-000000000000',
    'start_time': '1970-01-02T03:04:05.000000',
    'status': 'OK',
    'task_id': '00000000-0000-0000-0000-000000000000',
    'task_idemkey': 'tasks-backends-sqlite-vacuum',
    'worker': 'dcmd-test-mask',
  })
# ---
